<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Yep</string>
    <string name="settings">Settings</string>
    <string name="tab_title_chats">Chats</string>
    <string name="tab_title_friends">Friends</string>
    <string name="tab_title_explore">Explore</string>
    <string name="tab_title_my_profile">My Profile</string>
    <string name="chat">Chat</string>
    <string name="sign_in">Sign In</string>
    <string name="skill_type_master">Master</string>
    <string name="skill_type_learning">Learning</string>
    <string name="icon">Icon</string>
    <string name="menu">Menu</string>
    <string name="about">About</string>
    <string name="notifications">Notifications</string>
    <string name="feedback">Feedback</string>
    <string name="profile">Profile</string>
    <string name="action_settings">Settings</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="suggestions">Suggestions</string>
    <string name="rank">Rank</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="error_invalid_password">Invalid password</string>
    <string name="error_field_required">Field required</string>
    <string name="error_invalid_email">Invalid email</string>
    <string name="error_incorrect_password">Password incorrect</string>
    <string name="previous_step">Previous</string>
    <string name="next_step">Next</string>
    <string name="finish">Finish</string>
    <string name="plus_symbol">+</string>
    <string name="phone_number">Phone number</string>
    <string name="unable_to_register">Unable to register</string>
    <string name="please_wait">Please wait</string>
    <string name="register_name_hint">What\'s your name?</string>
    <string name="register_verify_code_hint">Verify code</string>
    <string name="unable_to_verify_phone">Unable to verify phone</string>
    <string name="logout">Logout</string>
    <string name="no_introduction_yet">No introduction yet</string>
    <string name="nickname">Nickname</string>
    <string name="introduction">Introduction</string>
    <string name="skill">Skill</string>
    <string name="master">Master</string>
    <string name="learning">Learning</string>
    <string name="dribbble">Dribbble</string>
    <string name="github">Github</string>
    <string name="sign_in_to_provider_name">Sign in to <xliff:g id="name">%s</xliff:g></string>
    <string name="stars">Stars</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="instagram">Instagram</string>
    <string name="add">Add</string>
    <string name="edit_profile">Edit profile</string>
    <string name="add_skill">Add skill</string>
    <string name="say_hello">Say hello</string>
    <string name="unable_to_get_profile">Unable to get profile</string>
    <string name="logout_confirm_message">Are you sure to logout?</string>
    <string name="add_friend">Add friend</string>
    <string name="do_not_disturb">Do not disturb</string>
    <string name="block_user">Block</string>
    <string name="report_user">Report</string>
    <string name="find_friend">Find friend</string>
    <string name="search_user">Search user</string>
    <string name="location">Location</string>
    <string name="image">Image</string>
    <string name="audio">Audio</string>
    <string name="contact_friends">Contact friends</string>
    <string name="search">Search</string>
    <string name="notifications_and_privacy">Notifications and privacy</string>
    <string name="blocked_users">Blocked users</string>
    <string name="topics">Topics</string>
    <string name="feeds">Feeds</string>
    <string name="send">Send</string>
    <string name="new_topic">New topic</string>
    <string name="topic_posted">Topic posted</string>
    <string name="remove_topic_media_confirm">Remove media from this message?</string>
    <string name="remove">Remove</string>
    <string name="drafts_saved">Drafts saved</string>
    <string name="no_content">No content</string>
    <string name="unable_to_get_location">Unable to get location</string>
    <string name="topic">Topic</string>
    <string name="user">User</string>
    <string name="new_topic_hint">Share something to us :)</string>
    <string name="related_users">Related users</string>
    <string name="choose_skill">Choose skill</string>
    <string name="none">None</string>
    <string name="add_to_my_skills">Add to my skills</string>
    <string name="refresh">Refresh</string>
    <string name="unable_to_load_media">Unable to load media</string>
    <string name="media">Media</string>
    <string name="share">Share</string>
    <string name="share_text_template"><xliff:g id="name">%1$s</xliff:g>, from Yep, with genius. <xliff:g id="name">%2$s</xliff:g></string>
    <string name="set_username">Set username</string>
    <string name="delete_topic">Delete topic</string>
    <string name="joined_topics">Joined topics</string>
    <string name="circles">Circles</string>
    <string name="unable_to_connect">Unable to connect</string>
    <string name="send_feedback_hint">We read every feedback carefully.</string>
    <string name="record_audio_permission_required">Recording permission is needed to send audio</string>
    <string name="typing">Typing</string>
    <string name="distance">Distance</string>
    <string name="sort_order_nearby">Nearby</string>
    <string name="time">Time</string>
    <string name="unable_to_create_topic">Unable to create topic</string>
    <string name="unable_to_update_profile">Unable to update profile</string>
    <string name="my_current_location">My current location</string>
    <string name="use_location">Use location</string>
    <string name="ptt_hint">Press to talk</string>
    <string name="proxy">Proxy</string>
    <string name="proxy_host">Proxy host</string>
    <string name="proxy_port">Proxy port</string>
    <string name="sort_order_default">Match</string>
    <string name="sort_order_match">Match</string>
    <string name="blog">Blog</string>
    <string name="no_username">No username</string>
    <string name="swipe_up_to_cancel">Swipe up to cancel</string>
    <string name="release_to_cancel">Release to cancel</string>
    <string name="release_to_send">Release to send</string>
    <string name="message_not_received_hint">Message not received?</string>
    <string name="last_seen_time">Last seen <xliff:g id="time">%1$s</xliff:g></string>
    <string name="subscribe">Subscribe</string>
    <string name="report_topic">Report topic</string>
    <string name="sexual_content">Sexual content</string>
    <string name="spam">Spam</string>
    <string name="phishing">Phishing</string>
    <string name="other_reason">Other</string>
    <string name="report_type_title">Report type</string>
    <string name="report_reason_title">Report reason</string>
    <string name="search_topics">Search topics</string>
    <string name="search_friends">Search friends</string>
    <string name="hot_word_suggestion_hint">Try these</string>
    <string name="friends">Friends</string>
    <string name="users">Users</string>
    <string name="chat_history">Chat history</string>
    <string name="name_in_contacts"><xliff:g id="name">%1$s</xliff:g> in contacts</string>
    <string name="record_audio">Record audio</string>
</resources>
