<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/notifications"
        android:checkable="true"
        android:checked="true"
        android:title="@string/notifications"/>
    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_action_share"
        android:title="@string/share"/>
    <item
        android:id="@+id/subscribe"
        android:title="@string/subscribe"/>
    <item
        android:id="@+id/report_topic"
        android:title="@string/report_topic"/>
    <group android:id="@+id/group_menu_my_topic">
        <item
            android:id="@+id/delete"
            android:icon="@drawable/ic_action_delete"
            android:title="@string/delete_topic"/>
    </group>
</menu>