<!--
  ~ Copyright (c) 2015. Catch Inc,
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_action_share"
        android:title="@string/share"
        app:showAsAction="ifRoom"/>
    <group android:id="@+id/group_menu_myself">
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/settings"
            app:showAsAction="ifRoom"/>
    </group>
    <group android:id="@+id/group_menu_friend">
        <item
            android:id="@+id/do_not_disturb"
            android:title="@string/do_not_disturb"
            app:showAsAction="never"/>
        <item
            android:id="@+id/block_user"
            android:title="@string/block_user"
            app:showAsAction="never"/>
        <item
            android:id="@+id/report_user"
            android:title="@string/report_user"
            app:showAsAction="never"/>
    </group>
</menu>
