<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/element_spacing_normal">

    <com.pkmmte.view.CircularImageView
        android:id="@+id/profileImage"
        android:layout_width="@dimen/profile_image_size_github_user_info"
        android:layout_height="@dimen/profile_image_size_github_user_info"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/element_spacing_xlarge"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/followers_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/followers_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="?android:textColorPrimary"
                tools:text="100"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/followers"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="?android:textColorSecondary"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/stars_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/stars_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="?android:textColorPrimary"
                tools:text="100"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stars"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="?android:textColorSecondary"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/following_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/following_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="?android:textColorPrimary"
                tools:text="100"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/following"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="?android:textColorSecondary"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>